--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,12 @@
           -ms-overflow-style: none;  
           scrollbar-width: none;  
       }
+
+    .black-scroll-thumb::-webkit-scrollbar-thumb {
+        background: #333;
+        border-radius: 5px;
+    }
+      
     }
   }
 
@@ -25,6 +31,7 @@
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         scroll-behavior: smooth;
     }
+
     
     *{
         margin : 0;
@@ -34,3 +41,21 @@
 }
 
 
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+  
+::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 4px;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: #F97316;
+    border-radius: 5px;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
