--- a/src/index.css
+++ b/src/index.css
@@ -4,58 +4,54 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer utilities {
     @variants responsive {
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
 
-      .no-scrollbar::-webkit-scrollbar {
-          display: none;
-      }
+        .no-scrollbar {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
 
-      .no-scrollbar {
-          -ms-overflow-style: none;  
-          scrollbar-width: none;  
-      }
-
-    .black-scroll-thumb::-webkit-scrollbar-thumb {
-        background: #333;
-        border-radius: 5px;
+        .black-scroll-thumb::-webkit-scrollbar-thumb {
+            background: #333;
+            border-radius: 5px;
+        }
     }
-      
-    }
-  }
+}
 
 @layer base {
     html {
         font-size: 62.5%;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+            Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+            sans-serif;
         scroll-behavior: smooth;
     }
 
-    
-    *{
-        margin : 0;
+    * {
+        margin: 0;
         padding: 0;
         box-sizing: border-box;
     }
 }
 
-
-
 ::-webkit-scrollbar {
     width: 5px;
 }
-  
+
 ::-webkit-scrollbar-track {
     background: white;
     border-radius: 4px;
 }
-  
+
 ::-webkit-scrollbar-thumb {
-    background: #F97316;
+    background: #f97316;
     border-radius: 5px;
 }
-  
+
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
